# confluence-publisher

./: LICENSE  README.md  action.yml  confluence-manifest.yaml  pyproject.toml
.github/workflows/: ci.yml  publish-to-confluence.yml
confluence_publisher/: cli.py  confluence_client.py  converter.py  manifest.py  publisher.py
scripts/: setup_confluence.py
tests/: test_confluence_client.py  test_converter.py  test_manifest.py  test_publisher.py
