[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "confluence-publisher"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mistletoe>=1.3",
    "requests>=2.31",
    "PyYAML>=6.0",
    "click>=8.1",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-PyYAML>=6.0",
    "types-requests>=2.31",
]

[project.scripts]
confluence-publisher = "confluence_publisher.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["confluence_publisher*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
# mistletoe has no type stubs; the renderer class is inherently untyped
module = ["confluence_publisher.converter"]
ignore_errors = true

[[tool.mypy.overrides]]
# publisher and cli have complex Optional[client]/dry_run patterns and Click decorators
module = ["confluence_publisher.publisher", "confluence_publisher.cli"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["mistletoe.*"]
ignore_missing_imports = true
